--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "scripts": {
         "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
         "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-        "lint": "eslint . src config || true"
+        "lint": "eslint . src config || true",
+        "test": "jest",
+        "clean": "rm -rf node_modules dist package-lock.json && yarn install"
     },
     "dependencies": {
+        "postcss": "^8.2.6",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-router-dom": "^5.2.0"
+        "react-router-dom": "^5.2.0",
+        "tailwindcss": "^2.0.3"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
@@ -23,6 +27,9 @@
         "@babel/preset-flow": "^7.12.13",
         "@babel/preset-react": "^7.12.13",
         "@babel/preset-typescript": "^7.12.16",
+        "@testing-library/dom": "^7.29.4",
+        "@testing-library/jest-dom": "^5.11.9",
+        "@testing-library/react": "^11.2.5",
         "@types/react": "^17.0.2",
         "@types/react-dom": "^17.0.1",
         "@types/react-router-dom": "^5.1.7",
@@ -42,6 +49,7 @@
         "eslint-webpack-plugin": "^2.5.1",
         "html-webpack-plugin": "^5.1.0",
         "husky": "^5.0.9",
+        "jest": "^26.6.3",
         "lint-staged": "^10.5.4",
         "mini-css-extract-plugin": "^1.3.6",
         "node-sass": "^5.0.0",
@@ -50,6 +58,7 @@
         "prettier": "^2.2.1",
         "prettier-webpack-plugin": "^1.2.0",
         "sass-loader": "^11.0.1",
+        "style-loader": "^2.0.0",
         "ts-node": "^9.1.1",
         "typescript": "^4.1.5",
         "typescript-loader": "^1.1.3",
