--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
         "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
         "lint": "eslint . src config || true",
         "test": "jest",
-        "clean": "rm -rf node_modules dist package-lock.json && yarn install"
+        "clean": "rm -rf node_modules dist yarn.lock && yarn install"
     },
     "dependencies": {
-        "postcss": "^8.2.6",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-router-dom": "^5.2.0",
-        "tailwindcss": "^2.0.3"
+        "react-router-dom": "^5.2.0"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
@@ -27,6 +25,7 @@
         "@babel/preset-flow": "^7.12.13",
         "@babel/preset-react": "^7.12.13",
         "@babel/preset-typescript": "^7.12.16",
+        "@tailwindcss/custom-forms": "^0.2.1",
         "@testing-library/dom": "^7.29.4",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
@@ -34,6 +33,7 @@
         "@types/react-dom": "^17.0.1",
         "@types/react-router-dom": "^5.1.7",
         "@types/webpack": "^4.41.26",
+        "autoprefixer": "^10.2.4",
         "babel-loader": "^8.2.2",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^7.0.0",
@@ -53,12 +53,18 @@
         "lint-staged": "^10.5.4",
         "mini-css-extract-plugin": "^1.3.6",
         "node-sass": "^5.0.0",
+        "postcss": "^8.2.6",
+        "postcss-csso": "^5.0.0",
+        "postcss-fixes": "^2.0.1",
+        "postcss-import": "^14.0.0",
         "postcss-loader": "^5.0.0",
         "postcss-preset-env": "^6.7.0",
         "prettier": "^2.2.1",
         "prettier-webpack-plugin": "^1.2.0",
+        "purgecss": "^4.0.0",
         "sass-loader": "^11.0.1",
         "style-loader": "^2.0.0",
+        "tailwindcss": "^2.0.3",
         "ts-node": "^9.1.1",
         "typescript": "^4.1.5",
         "typescript-loader": "^1.1.3",
